--- a/cplayerg.css
+++ b/cplayerg.css
@@ -1,20 +1,32 @@
+@import "icons/icono.min.css";
+/* https://saeedalipoor.github.io/icono/ */
+
+.playerbtn,.playerbtn:hover, .playerbtn:active {
+	background-color:transparent;
+	-moz-border-radius:50%;
+	-webkit-border-radius: 50%;
+	border-radius:50%;
+  border: none;
+  outline:none;
+}
+
 
   .player{		
 		background-color: antiquewhite;
-		    bottom: 0;
+		/* bottom: 0;
     position: absolute;
     width: 100%;
-    left: 0px;
+    left: 0px; */
 		}
 		.divin{
-			width: 80px;
+			/* width: 80px; */
 			display: inline;
 			margin: 5px;
 		}
 		
   input[type=range].volume{
       /* -webkit-appearance: slider-vertical; */
-      width: 50px;
+      width: 100px;
   
     }
 
