--- a/client/src/css/cplayer.css
+++ b/client/src/css/cplayer.css
@@ -13,113 +13,118 @@
 .artimg{
   width: 50px;
 }
-  .player{		
-		background-color: antiquewhite;
-    }
-    .bottomPlayer{
-      bottom: 0;
-      position: absolute;
-      width: 100%;
-      left: 0px;
-    }
-		.divin{
-			/* width: 80px; */
-			display: inline;
-			margin: 5px;
-		}
+
+.player{		
+	background-color: antiquewhite;
+}
+.bottomPlayer{
+  bottom: 0;
+  position: absolute;
+  width: 99%;
+  margin: 0px;
+}
+.controls{
+  top: 30px;
+  position: absolute;
+  padding-left: 50px;
+}
+.divin{
+	display: inline;
+	margin: 5px;
+}
 		
-  input[type=range].volume{
-      /* -webkit-appearance: slider-vertical; */
-      width: 100px;
-  
-    }
+input[type=range].volume{
+  width: 100px;  
+}
 
 input[type=range] {
-    -webkit-appearance: none;
-    margin: 0;
-    width: 100%;
-	background: transparent;
-  }
-  input[type=range]:focus {
-    outline: none;
-  }
-  input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 0px 0px 1px #000000;
-    background: #076E00;
-    border-radius: 5px;
-    border: 0px solid #000000;
-  }
-  input[type=range]::-webkit-slider-thumb {
-    box-shadow: 0px 0px 0px #000000;
-    border: 1px solid #000000;
-    height: 9px;
-    width: 9px;
-    border-radius: 50px;
-    background: #FFFFFF;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -1px;
-  }
-  input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #076E00;
-  }
-  input[type=range]::-moz-range-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 0px 0px 1px #000000;
-    background: #076E00;
-    border-radius: 5px;
-    border: 0px solid #000000;
-  }
-  input[type=range]::-moz-range-thumb {
-    box-shadow: 0px 0px 0px #000000;
-    border: 1px solid #000000;
-    height: 9px;
-    width: 9px;
-    border-radius: 50px;
-    background: #FFFFFF;
-    cursor: pointer;
-  }
-  input[type=range]::-ms-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
-    animate: 0.2s;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-  }
-  input[type=range]::-ms-fill-lower {
-    background: #076E00;
-    border: 0px solid #000000;
-    border-radius: 10px;
-    box-shadow: 0px 0px 1px #000000;
-  }
-  input[type=range]::-ms-fill-upper {
-    background: #076E00;
-    border: 0px solid #000000;
-    border-radius: 10px;
-    box-shadow: 0px 0px 1px #000000;
-  }
-  input[type=range]::-ms-thumb {
-    margin-top: 1px;
-    box-shadow: 0px 0px 0px #000000;
-    border: 1px solid #000000;
-    height: 9px;
-    width: 9px;
-    border-radius: 50px;
-    background: #FFFFFF;
-    cursor: pointer;
-  }
-  input[type=range]:focus::-ms-fill-lower {
-    background: #076E00;
-  }
-  input[type=range]:focus::-ms-fill-upper {
-    background: #076E00;
-  }
+  -webkit-appearance: none;
+  margin: 0;
+  width: 100%;
+  background: #076E00;
+  height: 10px;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  animate: 0.1s;
+  box-shadow: 0px 0px 1px #000000;
+  background: #076E00;
+  border-radius: 5px;
+  border: 0px solid #000000;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #000000;
+  height: 9px;
+  width: 9px;
+  border-radius: 50px;
+  background: #FFFFFF;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -1px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #076E00;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  animate: 0.1s;
+  box-shadow: 0px 0px 1px #000000;
+  background: #076E00;
+  border-radius: 5px;
+  border: 0px solid #000000;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #000000;
+  height: 9px;
+  width: 9px;
+  border-radius: 50px;
+  background: #FFFFFF;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  animate: 0.1s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #076E00;
+  border: 0px solid #000000;
+  border-radius: 10px;
+  box-shadow: 0px 0px 1px #000000;
+}
+input[type=range]::-ms-fill-upper {
+  background: #076E00;
+  border: 0px solid #000000;
+  border-radius: 10px;
+  box-shadow: 0px 0px 1px #000000;
+}
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #000000;
+  height: 9px;
+  width: 9px;
+  border-radius: 50px;
+  background: #FFFFFF;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #076E00;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #076E00;
+}
+  
