--- a/src/css/cplayer.css
+++ b/src/css/cplayer.css
@@ -1,6 +1,10 @@
 @import "icons/icono.min.css";
 /* https://saeedalipoor.github.io/icono/ */
 
+.bottomPlayer:focus{
+  outline: none;
+}
+
 .playerbtn,.playerbtn:hover, .playerbtn:active {
 	background-color:transparent;
 	-moz-border-radius:50%;
@@ -8,6 +12,7 @@
 	border-radius:50%;
   border: none;
   outline:none;
+  color: aliceblue;
 }
 
 .artimg{
@@ -16,7 +21,7 @@
 }
 
 .player{		
-	background-color: antiquewhite;
+	background-color: #042020;
 }
 .bottomPlayer{
   bottom: 0;
@@ -24,119 +29,34 @@
   width: 100%;
   margin: 0px;
 }
+.bottomPlayer:focus, .bottomPlayer:hover, .bottomPlayer:active {
+  outline: none;
+}
+
 .controls{
   top: 17px;
   position: absolute;
   padding-left: 50px;
 }
+.controlBox{
+  padding-left: 5px;
+}
 .divin{
 	display: inline;
-	margin: 5px;
+  margin: 5px;
+  color: aliceblue;
 }
 .title{
-	white-space: nowrap;
+  white-space: nowrap;
+  font-size: 12px;
+  color: aliceblue;
 }
 .titlediv{
-	height: 15px;
+	height: 20px;
 	width: 300px;
-	overflow: hidden;	
+  overflow: hidden;	
+  padding-left: 10px;
 }
-		
-input[type=range].volume{
-  width: 100px;  
-}
-
-input[type=range] {
-  -webkit-appearance: none;
-  margin: 0;
-  width: 100%;
-  background: #076E00;
-  height: 10px;
-}
-input[type=range]:focus {
-  outline: none;
-}
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 8px;
-  cursor: pointer;
-  animate: 0.1s;
-  box-shadow: 0px 0px 1px #000000;
-  background: #076E00;
-  border-radius: 5px;
-  border: 0px solid #000000;
-}
-input[type=range]::-webkit-slider-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #000000;
-  height: 9px;
-  width: 9px;
-  border-radius: 50px;
-  background: #FFFFFF;
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -1px;
-}
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #076E00;
-}
-input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 8px;
-  cursor: pointer;
-  animate: 0.1s;
-  box-shadow: 0px 0px 1px #000000;
-  background: #076E00;
-  border-radius: 5px;
-  border: 0px solid #000000;
-}
-input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #000000;
-  height: 9px;
-  width: 9px;
-  border-radius: 50px;
-  background: #FFFFFF;
-  cursor: pointer;
-}
-input[type=range]::-ms-track {
-  width: 100%;
-  height: 8px;
-  cursor: pointer;
-  animate: 0.1s;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-input[type=range]::-ms-fill-lower {
-  background: #076E00;
-  border: 0px solid #000000;
-  border-radius: 10px;
-  box-shadow: 0px 0px 1px #000000;
-}
-input[type=range]::-ms-fill-upper {
-  background: #076E00;
-  border: 0px solid #000000;
-  border-radius: 10px;
-  box-shadow: 0px 0px 1px #000000;
-}
-input[type=range]::-ms-thumb {
-  margin-top: 1px;
-  box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #000000;
-  height: 9px;
-  width: 9px;
-  border-radius: 50px;
-  background: #FFFFFF;
-  cursor: pointer;
-}
-input[type=range]:focus::-ms-fill-lower {
-  background: #076E00;
-}
-input[type=range]:focus::-ms-fill-upper {
-  background: #076E00;
-}
-
 
 /* marquee start */
 
@@ -153,7 +73,7 @@ input[type=range]:focus::-ms-fill-upper {
   width: 200%;
   height: 30px;
   overflow: hidden;
-  animation: marquee 5s linear infinite;
+  animation: marquee 10s linear infinite;
 }
 
 .marquee span {
@@ -168,3 +88,169 @@ input[type=range]:focus::-ms-fill-upper {
 /* marquee end */
 
   
+.slider {
+  position: relative;
+  display: inline-block;
+  margin: -4px 6px 0 0;
+  width: 100%;
+}
+/* Input ------------------- */
+
+input[type=range].seekslider {
+    margin: auto;
+    -webkit-appearance: none;
+    position: relative;
+    overflow: hidden;
+    height: 10px;
+    width: 100%;
+    cursor: pointer;
+    border-radius: 0; /* iOS */
+}
+
+::-webkit-slider-runnable-track {
+    background: tomato;
+    height: 10px;
+    width: 10px;
+}
+
+/*
+ * 1. Set to 0 width and remove border for a slider without a thumb
+ */
+::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 10px; /* 1 */
+    height: 10px;
+    background: #fff;
+    box-shadow: -100vw 0 0 100vw rgb(96, 219, 25);
+    border: none; /* 1 */
+}
+
+::-moz-range-track {
+    height: 10px;
+    background: tomato;
+}
+
+::-moz-range-thumb {
+    background: #fff;
+    height: 10px;
+    width: 10px;
+    border: none;
+    border-radius: 0 !important;
+    box-shadow: -100vw 0 0 100vw  rgb(96, 219, 25);
+    box-sizing: border-box;
+}
+
+::-ms-fill-lower { 
+    background:  rgb(96, 219, 25);
+    height: 10px;
+    width: 10px;
+}
+
+::-ms-thumb { 
+    background: #fff;
+    border: none;
+    height: 10px;
+    width: 10px;
+    box-sizing: border-box;
+}
+
+::-ms-ticks-after { 
+    display: none; 
+}
+
+::-ms-ticks-before { 
+    display: none; 
+}
+
+::-ms-track { 
+    background: #ddd;
+    color: transparent;
+    height: 10px;
+    border: none;
+}
+
+::-ms-tooltip { 
+    display: none;
+}
+
+
+
+/* volume */
+
+input[type=range].volume  {
+  margin: auto;
+  -webkit-appearance: none;
+  position: relative;
+  overflow: hidden;
+  height: 10px;
+  width: 100px;
+  cursor: pointer;
+  border-radius: 0; /* iOS */
+}
+
+::-webkit-slider-runnable-track {
+  background: tomato;
+  height: 10px;
+  width: 10px;
+}
+
+/*
+* 1. Set to 0 width and remove border for a slider without a thumb
+*/
+::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 10px; /* 1 */
+  height: 10px;
+  background: #fff;
+  box-shadow: -100vw 0 0 100vw rgb(96, 219, 25);
+  border: none; /* 1 */
+}
+
+::-moz-range-track {
+  height: 10px;
+  background: tomato;
+}
+
+::-moz-range-thumb {
+  background: #fff;
+  height: 10px;
+  width: 10px;
+  border: none;
+  border-radius: 0 !important;
+  box-shadow: -100vw 0 0 100vw  rgb(96, 219, 25);
+  box-sizing: border-box;
+}
+
+::-ms-fill-lower { 
+  background:  rgb(96, 219, 25);
+  height: 10px;
+  width: 10px;
+}
+
+::-ms-thumb { 
+  background: #fff;
+  border: none;
+  height: 10px;
+  width: 10px;
+  box-sizing: border-box;
+}
+
+::-ms-ticks-after { 
+  display: none; 
+}
+
+::-ms-ticks-before { 
+  display: none; 
+}
+
+::-ms-track { 
+  background: #ddd;
+  color: transparent;
+  height: 10px;
+  border: none;
+}
+
+::-ms-tooltip { 
+  display: none;
+}
+
